--- a/config.yaml
+++ b/config.yaml
@@ -15,7 +15,8 @@
 #
 # (When overriding, include vagrant.local if you need it)
 hosts:
-    - vagrant.local
+    # - vagrant.local
+    - otb.tarei.me
 
 # IP address to use on the private network
 #
